--- a/task_manager/templates/task_manager/create_task.html
+++ b/task_manager/templates/task_manager/create_task.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Create Task</title>
+
+    <!-- Temporary date picker -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
 </head>
 <body>
     <h1>Create New Task</h1>
