--- a/task_manager/templates/task_manager/create_task.html
+++ b/task_manager/templates/task_manager/create_task.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
     <title>Create Task</title>
-
-    <!-- Temporary date picker -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Create New Task</h1>
+    <h1>Create Task for {{ date }}</h1>
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
