--- a/task_management/templates/task_management/home.html
+++ b/task_management/templates/task_management/home.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="{% static 'images/logo.png' %}" alt="SynergyPro Logo">
+                <img src="{% static 'images/logo_original.png' %}" alt="SynergyPro Logo">
                 <a href="#" class="logo-link">SynergyPro</a>
             </div>
             <ul>
@@ -310,6 +310,22 @@
                             placeholder="Enter your last name"
                             required
                             title="Enter your last name using only letters (no numbers or special characters)"
+                        >
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-group team-name-field" style="display: none;">
+                        <label for="teamName">Team Name</label>
+                        <input 
+                            type="text" 
+                            id="teamName" 
+                            name="teamName" 
+                            class="form-control" 
+                            placeholder="Enter your team name"
+                            pattern="[A-Za-z\s]+"
+                            minlength="3"
+                            maxlength="50"
+                            required
+                            title="Enter your Team's Name"
                         >
                         <div class="error-message"></div>
                     </div>
